--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -61,7 +61,7 @@
 
           const skyAnimations = {
             day: setSkyAnimation("Day", "material.inclination", skyboxMaterial.inclination, 0),
-            night: setSkyAnimation("Night", "material.inclination", skyboxMaterial.inclination, -0.5),
+            night: setSkyAnimation("Night", "material.inclination", skyboxMaterial.inclination, -0.5)
           };
          
           //Set materials
@@ -161,8 +161,7 @@
             buttonData: {
               label: 'Apple Blossom Tree',
               verticalOffset: -250
-            },
-            skyAnimation: skyAnimations.night
+            }
           }];
 
 
