Add helpers for tooltips

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,8 +26,18 @@
     <script src="javascripts/createTree.js"></script>
     <script src="javascripts/setSkyAnimation.js"></script>
     <script src="javascripts/setGround.js"></script>
+    <script src="javascripts/createAttachedTooltipLine.js"></script>
     <script src="javascripts/createButton.js"></script>
     <script src="javascripts/createTooltip.js"></script>
+    <script src="javascripts/createCircleTarget.js"></script>
+    <script src="javascripts/createAnimationGroup.js"></script>
+    <script src="javascripts/createBaseTooltipAnimation.js"></script>
+    <script src="javascripts/createBaseText.js"></script>
+    <script src="javascripts/createBaseTextBox.js"></script>
+    <script src="javascripts/createLineAnimation.js"></script>
+    <script src="javascripts/createLabelAnimation.js"></script>
+    <script src="javascripts/createAttachedText.js"></script>
+    <script src="javascripts/createBaseTooltip.js"></script>
     <script src="javascripts/createAttachedTooltip.js"></script>
     <script src="consts.js"></script>
 
