Update base tooltip copy

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -121,7 +121,7 @@
           const treesData = [{
             data: TREES_NUMBER_VALUES[0],
             leafMaterial: materials.defaultLeaf,
-            tooltipText: "This is the first tree",
+            tooltipText: "Hello! We're Enterprise and Infrastructure COEs!",
             buttonData: {
               label: 'Bud',
               verticalOffset: 0
@@ -130,7 +130,7 @@
           }, {
             data: TREES_NUMBER_VALUES[1],
             leafMaterial: materials.defaultLeaf,
-            tooltipText: "This is the second tree",
+            tooltipText: "I'm growing. Hover over the branches to see my growth.",
             buttonData: {
               label: 'Young Tree',
               verticalOffset: -50
@@ -140,7 +140,7 @@
           }, {
             data: TREES_NUMBER_VALUES[2],
             leafMaterial: materials.overwateredLeaf,
-            tooltipText: "This is the third tree",
+            tooltipText: "I'm a growing faster and bigger.",
             buttonData: {
               label: 'Growing Tree',
               verticalOffset: -100
@@ -149,7 +149,7 @@
           }, {
             data: TREES_NUMBER_VALUES[3],
             leafMaterial: materials.dryLeaf,
-            tooltipText: "This is the fourth tree",
+            tooltipText: "Oh no, I'm overwatered. I'd like to grow faster, but I need time and cannot take too many requests all at once.",
             buttonData: {
               label: 'Overwatered Tree',
               verticalOffset: -150
@@ -158,7 +158,7 @@
           }, {
             data: TREES_NUMBER_VALUES[4],
             leafMaterial: materials.cherryBlossom,
-            tooltipText: "This is the fifth tree",
+            tooltipText: "Thank you for listening. The right amount of water added soil, bug fixing all really helped. Now I just need some time to recover and keep up the growth.",
             buttonData: {
               label: 'Recovered Tree',
               verticalOffset: -200
@@ -167,7 +167,7 @@
           }, {
             data: TREES_NUMBER_VALUES[5],
             leafMaterial: materials.cherryBlossom,
-            tooltipText: "This is the sixth tree",
+            tooltipText: "Thank you for taking care of me. Let's keep up the structured process. I'm so proud to be the strongest and most fruitful tree in the field.",
             buttonData: {
               label: 'Apple Blossom Tree',
               verticalOffset: -250
