--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -141,6 +141,18 @@
                 offsetY: -200,
                 text: TOOLTIP_TEXT_BRANCHES.BUILD,
                 width: "100px"
+              },
+              {
+                offsetX: 40,
+                offsetY: -150,
+                text: TOOLTIP_TEXT_BRANCHES.DOCS,
+                width: "100px"
+              },
+              {
+                offsetX: -40,
+                offsetY: -150,
+                text: TOOLTIP_TEXT_BRANCHES.INSIGHT,
+                width: "100px"
               }
             ],
             leafMaterial: materials.defaultLeaf,
