--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,8 +37,6 @@
       <canvas id="renderCanvas" touch-action="none"></canvas>
       <script>
         var createScene = function() {
-          // TODO: Start here for initialization
-
           // Initialize Scene
           const scene = new BABYLON.Scene(engine);
 
@@ -49,22 +47,38 @@
             "light",
             new BABYLON.Vector3(0, 1, 0)
           );
-          light.intensity = 1;
 
-          setGround();
+          // Create Materials
 
-           var skyboxMaterial = new BABYLON.SkyMaterial("skyMaterial");
-          skyboxMaterial.backFaceCulling = false;
+          //Skybox Materials
+          const skyboxMaterials = {};
 
-          var skybox = BABYLON.Mesh.CreateBox("skyBox", 1000.0);
-          skybox.material = skyboxMaterial;
+          const generateSkyMaterial = function (name,values) {
+            skyboxMaterials[name] = new BABYLON.SkyMaterial("skyMaterial");
+            skyboxMaterials[name].backFaceCulling = false;
+            skyboxMaterials[name].turbidity = values.turbidity,
+            skyboxMaterials[name].luminance = values.luminance,
+            skyboxMaterials[name].rayleigh = values.rayleigh,
+            skyboxMaterials[name].inclination = values.inclination,
+            skyboxMaterials[name].mieCoefficient = values.mieCoefficient,
+            skyboxMaterials[name].mieDirectionalG = values.mieDirectionalG
+            skyboxMaterials[name].azimuth = values.azimuth
+          }
 
-          const skyAnimations = {
-            day: setSkyAnimation("Day", "material.inclination", skyboxMaterial.inclination, 0),
-            night: setSkyAnimation("Night", "material.inclination", skyboxMaterial.inclination, -0.5)
-          };
-         
-          //Set materials
+          generateSkyMaterial('earlyMorning', SKY_MATERIALS_DATA.earlyMorning);
+          generateSkyMaterial('morning', SKY_MATERIALS_DATA.morning);
+          generateSkyMaterial('noon', SKY_MATERIALS_DATA.noon);
+          generateSkyMaterial('earlyAfternoon', SKY_MATERIALS_DATA.earlyAfternoon);
+          generateSkyMaterial('afternoon', SKY_MATERIALS_DATA.afternoon);
+          generateSkyMaterial('sunset', SKY_MATERIALS_DATA.sunset);
+
+          skyboxMaterials.cloudy = new BABYLON.StandardMaterial("skyBox", scene);
+          skyboxMaterials.cloudy.backFaceCulling = false;
+          skyboxMaterials.cloudy.reflectionTexture = new BABYLON.CubeTexture("assets/cloudy", scene);
+          skyboxMaterials.cloudy.reflectionTexture.coordinatesMode = BABYLON.Texture.SKYBOX_MODE;
+          skyboxMaterials.cloudy.diffuseColor = new BABYLON.Color3(0, 0, 0);
+          skyboxMaterials.cloudy.specularColor = new BABYLON.Color3(0, 0, 0);
+
           const materials = {};
 
           materials.defaultBark = new BABYLON.StandardMaterial("defaultBark", scene);
@@ -100,11 +114,20 @@
               scene
           );
           
-          materials.cherryBlossom.diffuseColor = BABYLON.Color3.FromHexString("#E84396")
-          materials.cherryBlossom.specularColor = BABYLON.Color3.FromHexString("#E84396")
-          materials.cherryBlossom.emissiveColor = BABYLON.Color3.FromHexString("#FF9DCE")
-          materials.cherryBlossom.ambientColor = BABYLON.Color3.FromHexString("#FF9DCE")
+          materials.cherryBlossom.diffuseColor = BABYLON.Color3.FromHexString("#E84396");
+          materials.cherryBlossom.specularColor = BABYLON.Color3.FromHexString("#E84396");
+          materials.cherryBlossom.emissiveColor = BABYLON.Color3.FromHexString("#FF9DCE");
+          materials.cherryBlossom.ambientColor = BABYLON.Color3.FromHexString("#FF9DCE");
 
+
+          setGround();
+          
+          //const skyAnimations = {
+          //  day: setSkyAnimation("Day", "material.inclination", skyboxMaterial.inclination, 0),
+          //  night: setSkyAnimation("Night", "material.inclination", skyboxMaterial.inclination, -0.5)
+          //};
+
+          
           //Set trees data
           let trees = [];
 
@@ -116,7 +139,7 @@
               label: 'Bud',
               verticalOffset: 0
             },
-            skyAnimation: skyAnimations.day
+            skyMaterial: skyboxMaterials.earlyMorning
           }, {
             data: TREES_NUMBER_VALUES[1],
             leafMaterial: materials.defaultLeaf,
@@ -125,8 +148,7 @@
               label: 'Young Tree',
               verticalOffset: -50
             },
-            skyAnimation: skyAnimations.night
-            
+            skyMaterial: skyboxMaterials.morning
           }, {
             data: TREES_NUMBER_VALUES[2],
             leafMaterial: materials.overwateredLeaf,
@@ -135,7 +157,7 @@
               label: 'Growing Tree',
               verticalOffset: -100
             },
-            skyAnimation: skyAnimations.day
+            skyMaterial: skyboxMaterials.noon
           }, {
             data: TREES_NUMBER_VALUES[3],
             leafMaterial: materials.dryLeaf,
@@ -144,7 +166,7 @@
               label: 'Overwatered Tree',
               verticalOffset: -150
             },
-            skyAnimation: skyAnimations.night
+            skyMaterial: skyboxMaterials.cloudy,
           }, {
             data: TREES_NUMBER_VALUES[4],
             leafMaterial: materials.cherryBlossom,
@@ -153,7 +175,7 @@
               label: 'Recovered Tree',
               verticalOffset: -200
             },
-            skyAnimation: skyAnimations.day
+            skyMaterial: skyboxMaterials.afternoon
           }, {
             data: TREES_NUMBER_VALUES[5],
             leafMaterial: materials.cherryBlossom,
@@ -161,11 +183,16 @@
             buttonData: {
               label: 'Apple Blossom Tree',
               verticalOffset: -250
-            }
+            },
+            skyMaterial: skyboxMaterials.sunset
+
           }];
 
+          //Create skybox
+          const skybox = BABYLON.MeshBuilder.CreateBox("skyBox", {size:1000.0}, scene);
+          skybox.material = skyboxMaterials.earlyMorning;
 
-          const onClickButton = function (treeIndex) {
+          const onClickButton = function(treeIndex) {
             trees.forEach(function(tree, index) {
               if (index === treeIndex) {
                 tree.setEnabled(true);
@@ -173,10 +200,14 @@
                 tree.setEnabled(false);
               }
             });
-            scene.stopAnimation(skybox);
-            scene.beginDirectAnimation(skybox, [treesData[treeIndex].skyAnimation], 0, 100, false, 1);
+
+            //scene.stopAnimation(skybox);
+            //scene.beginDirectAnimation(skybox, [treesData[treeIndex].skyAnimation], 0, 100, false, 1);
+
+            skybox.material = treesData[treeIndex].skyMaterial;
           }
 
+           
           const generateTrees = function(treesData) {
             return treesData.map(function(tree, index) {
               const generatedTree = createTree(
