Add sky material to cherry blossom tree

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -239,7 +239,8 @@
             buttonData: {
               label: 'Cherry Blossom',
               verticalOffset: -270
-            }
+            },
+            skyMaterial: skyboxMaterials.sunset
           }];
 
            //Create skybox
